fix(appRequest): fix title overlap (#629)

--- a/src/components/shared/templates/AdminBoard/style.scss
+++ b/src/components/shared/templates/AdminBoard/style.scss
@@ -97,5 +97,8 @@
 
   .admin-board-elements-main {
     margin-bottom: 22px;
+    h5 {
+      margin-bottom: 10px;
+    }
   }
 }
